--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,7 @@ binary-arch: build
 	cp changelog debian/tmp/usr/share/doc/libdashel/changelog
 	cp debian/changelog debian/tmp/usr/share/doc/libdashel/changelog.debian
 	cp debian/copyright debian/tmp/usr/share/doc/libdashel
-	cp streams.h debian/tmp/usr/include/dashel
+	cp dashel.h debian/tmp/usr/include/dashel
 	cp libdashel.a debian/tmp/usr/lib
 	cp libdasheld.a debian/tmp/usr/lib
 	chown -R root.root debian/tmp
