- fixed build file to work on mac os x

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,28 @@
 project(dashel)
 
-if (win32)
+if (WIN32)
 	set(dashel-sources dashel-win32.cpp dashel-common.cpp)
-else (win32)
+else (WIN32)
 	set(dashel-sources dashel-posix.cpp dashel-common.cpp)
-	if (apple)
-		set(dashel-sources ${dashel-sources} poll_emu.cpp)
-	else (apple)
+	if (APPLE)
+		set(dashel-sources ${dashel-sources} poll_emu.c)
+		find_library(COREFOUNDATION_LIBRARY CoreFoundation)
+		find_library(IOKIT_LIBRARY IOKit)
+		mark_as_advanced(COREFOUNDATION_LIBRARY)
+		mark_as_advanced(IOKIT_LIBRARY)
+		set(EXTRA_LIBS ${COREFOUNDATION_LIBRARY} ${IOKIT_LIBRARY})
+	else (APPLE)
 		find_package(PkgConfig)
 		pkg_check_modules(HAL hal)
 		include_directories(${HAL_INCLUDE_DIRS})
-	endif (apple)
-endif (win32)
+		set(EXTRA_LIBS ${HAL_LIBRARIES})
+	endif (APPLE)
+endif (WIN32)
 
 add_library(dashel ${dashel-sources})
 
 add_executable(microterm microterm.cpp)
-target_link_libraries(microterm dashel ${HAL_LIBRARIES})
+target_link_libraries(microterm dashel ${EXTRA_LIBS})
 
 add_executable(chat chat.cpp)
-target_link_libraries(chat dashel ${HAL_LIBRARIES})
+target_link_libraries(chat dashel ${EXTRA_LIBS})
