- fixed OS X version to use system's poll instead of poll_emu - fixed installation directory for dashel's header

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,12 @@ if (WIN32)
 else (WIN32)
 	set(DASHEL_SOURCES dashel/dashel-posix.cpp dashel/dashel-common.cpp)
 	if (APPLE)
-		set(DASHEL_SOURCES ${DASHEL_SOURCES} dashel/poll_emu.c)
 		find_library(COREFOUNDATION_LIBRARY CoreFoundation)
 		find_library(IOKIT_LIBRARY IOKit)
 		mark_as_advanced(COREFOUNDATION_LIBRARY)
 		mark_as_advanced(IOKIT_LIBRARY)
-		set(EXTRA_LIBS ${COREFOUNDATION_LIBRARY} ${IOKIT_LIBRARY})
+		find_library(POLL_LIBRARY poll)
+		set(EXTRA_LIBS ${COREFOUNDATION_LIBRARY} ${IOKIT_LIBRARY} ${POLL_LIBRARY})
 	else (APPLE)
 		find_package(PkgConfig)
 		pkg_check_modules(HAL hal)
@@ -25,7 +25,7 @@ add_library(dashel ${DASHEL_SOURCES})
 
 # install target
 install(FILES dashel/dashel.h
-        DESTINATION include)
+        DESTINATION include/dashel)
 install(TARGETS dashel
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
