Made dependency on libhal optional. If not present, connection to serial port must specifiy the full device name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,11 @@ else (WIN32)
 	else (APPLE)
 		find_package(PkgConfig)
 		pkg_check_modules(HAL hal)
-		include_directories(${HAL_INCLUDE_DIRS})
-		set(EXTRA_LIBS ${HAL_LIBRARIES})
+		if (HAL_FOUND)
+			include_directories(${HAL_INCLUDE_DIRS})
+			set(EXTRA_LIBS ${HAL_LIBRARIES})
+			add_definitions(-DHAL)
+		endif (HAL_FOUND)
 	endif (APPLE)
 endif (WIN32)
 
