fixed bug in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,11 +17,11 @@ else (WIN32)
 	else (APPLE)
 		find_package(PkgConfig)
 		pkg_check_modules(HAL hal)
-		if (HAL_FOUND)
+		if (${HAL_FOUND})
 			include_directories(${HAL_INCLUDE_DIRS})
 			set(EXTRA_LIBS ${HAL_LIBRARIES})
-			add_definitions(-DHAL)
-		endif (HAL_FOUND)
+			add_definitions(-DUSE_HAL)
+		endif (${HAL_FOUND})
 	endif (APPLE)
 endif (WIN32)
 
