--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Maintainer: Stephane Magnenat <stephane@nospam.magnenant.net>
 Section:devel
 Priority:optional
 Standards-Version: 3.7.2
+Build-Depends: cmake (>= 2.6)
 
 Package:libdashel
 Architecture: any
