Add libudev serial port enumeration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,19 @@ else (WIN32)
 		set(EXTRA_LIBS ${COREFOUNDATION_LIBRARY} ${IOKIT_LIBRARY} ${POLL_LIBRARY})
 	else (APPLE)
 		find_package(PkgConfig)
-		pkg_check_modules(HAL hal)
-		if (${HAL_FOUND})
-			include_directories(${HAL_INCLUDE_DIRS})
-			set(EXTRA_LIBS ${HAL_LIBRARIES})
-			add_definitions(-DUSE_HAL)
-		endif (${HAL_FOUND})
+		pkg_check_modules(LIBUDEV libudev)
+		if (${LIBUDEV_FOUND})
+			include_directories(${LIBUDEV_INCLUDE_DIRS})
+			set(EXTRA_LIBS "-ludev")
+			add_definitions(-DUSE_LIBUDEV)
+		else (${LIBUDEV_FOUND})
+			pkg_check_modules(HAL hal)
+			if (${HAL_FOUND})
+				include_directories(${HAL_INCLUDE_DIRS})
+				set(EXTRA_LIBS ${HAL_LIBRARIES})
+				add_definitions(-DUSE_HAL)
+			endif (${HAL_FOUND})
+		endif (${LIBUDEV_FOUND})
 	endif (APPLE)
 endif (WIN32)
 
