--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,15 @@ cmake_minimum_required(VERSION 2.6)
 
 project(dashel)
 
+# libudev
+find_path(UDEV_INCLUDE_DIR libudev.h)
+find_library(UDEV_LIBS udev)
+
+if (UDEV_INCLUDE_DIR AND UDEV_LIBS)
+	message(STATUS "libudev found")
+	set(UDEV_FOUND 1)
+endif (UDEV_INCLUDE_DIR AND UDEV_LIBS)
+
 # libraries
 if (WIN32)
 	set(DASHEL_SOURCES dashel/dashel-win32.cpp dashel/dashel-common.cpp)
@@ -17,20 +26,19 @@ else (WIN32)
 		find_library(POLL_LIBRARY poll)
 		set(EXTRA_LIBS ${COREFOUNDATION_LIBRARY} ${IOKIT_LIBRARY} ${POLL_LIBRARY})
 	else (APPLE)
-		find_package(PkgConfig)
-		pkg_check_modules(LIBUDEV libudev)
-		if (${LIBUDEV_FOUND})
-			include_directories(${LIBUDEV_INCLUDE_DIRS})
-			set(EXTRA_LIBS "-ludev")
+		if (UDEV_FOUND)
+			include_directories(${UDEV_INCLUDE_DIR})
+			set(EXTRA_LIBS ${UDEV_LIBS})
 			add_definitions(-DUSE_LIBUDEV)
-		else (${LIBUDEV_FOUND})
+		else (UDEV_FOUND)
+			find_package(PkgConfig)
 			pkg_check_modules(HAL hal)
 			if (${HAL_FOUND})
 				include_directories(${HAL_INCLUDE_DIRS})
 				set(EXTRA_LIBS ${HAL_LIBRARIES})
 				add_definitions(-DUSE_HAL)
 			endif (${HAL_FOUND})
-		endif (${LIBUDEV_FOUND})
+		endif (UDEV_FOUND)
 	endif (APPLE)
 endif (WIN32)
 
