Fixed installation of dashelConfig.cmake on OS X

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ if (WIN32 AND NOT CYGWIN)
 	set(INSTALL_CMAKE_DIR CMake)
 else()
 	if (APPLE)
-		set(INSTALL_CMAKE_DIR dashel.framework/Resources/CMake/)
+		set(INSTALL_CMAKE_DIR Frameworks/dashel.framework/Resources/CMake/)
 	else()
 		set(INSTALL_CMAKE_DIR share/dashel/CMake)
 	endif()
