Added HTTP/1.0 web server as example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,7 +84,7 @@ install(FILES "${PROJECT_BINARY_DIR}/dashelConfig.cmake"
 
 # examples
 include_directories(${dashel_SOURCE_DIR})
-foreach (example microterm chat portlist udp)
+foreach (example microterm chat portlist udp dws)
 	add_executable(${example} examples/${example}.cpp)
 	target_link_libraries(${example} dashel ${EXTRA_LIBS})
 endforeach (example)
