--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,10 @@ binary-indep:
 binary-arch: build
 	rm -rf debian/tmp
 	install -d debian/tmp/DEBIAN
+	install -d debian/tmp/usr/include/dashel
+	install -d debian/tmp/usr/lib
 	install -d debian/tmp/usr/share/doc/libdashel
+	install -d debian/tmp/usr/share/dashel/CMake
 	cd debian/build && make install
 	strip --strip-unneeded -R .note -R .comment debian/tmp/usr/lib/*.a
 	cp changelog debian/tmp/usr/share/doc/libdashel/changelog
