--- a/debian/rules
+++ b/debian/rules
@@ -14,16 +14,14 @@ binary-indep:
 
 binary-arch: build
 	install -d debian/tmp/DEBIAN
-	#install -d debian/tmp/usr/include/dashel
-	#install -d debian/tmp/usr/lib
 	install -d debian/tmp/usr/share/doc/libdashel
-	#install -d debian/tmp/usr/share/dashel/CMake
 	cd debian/build && make install
 	strip --strip-unneeded -R .note -R .comment debian/tmp/usr/lib/*.a
 	cp changelog debian/tmp/usr/share/doc/libdashel/changelog
 	cp debian/changelog debian/tmp/usr/share/doc/libdashel/changelog.debian
 	cp debian/copyright debian/tmp/usr/share/doc/libdashel
-	gzip -9 debian/tmp/usr/share/doc/libdashel/changelog.debian
+	gzip -n9 debian/tmp/usr/share/doc/libdashel/changelog.debian
+	gzip -n9 debian/tmp/usr/share/doc/libdashel/changelog
 	chown -R root.root debian/tmp
 	chmod -R o-s,go=u,go-ws debian/tmp
 	dpkg-gencontrol
