--- a/debian/rules
+++ b/debian/rules
@@ -15,11 +15,13 @@ binary-indep:
 binary-arch: build
 	install -d debian/tmp/DEBIAN
 	install -d debian/tmp/usr/share/doc/libdashel
+	install -d debian/tmp/usr/share/doc/libdashel/html
 	cd debian/build && $(MAKE) install
 	strip --strip-unneeded -R .note -R .comment debian/tmp/usr/lib/*.a
 	cp changelog debian/tmp/usr/share/doc/libdashel/changelog
 	cp debian/changelog debian/tmp/usr/share/doc/libdashel/changelog.debian
 	cp debian/copyright debian/tmp/usr/share/doc/libdashel
+	cp -r docs/* debian/tmp/usr/share/doc/libdashel/html
 	gzip -n9 debian/tmp/usr/share/doc/libdashel/changelog.debian
 	gzip -n9 debian/tmp/usr/share/doc/libdashel/changelog
 	chown -R root.root debian/tmp
