--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Maintainer: Stephane Magnenat <stephane@nospam.magnenat.net>
 Section:devel
 Priority:optional
 Standards-Version: 3.7.2
-Build-Depends: cmake (>= 2.6), libudev-dev
+Build-Depends: cmake (>= 2.6), libudev-dev, libjs-jquery
 
 Package:libdashel
 Architecture: any
