on sonarcloud.io, use aseba-community

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # SonarCloud project for aseba-community/dashel
 
-sonar.projectKey=org.thymio:dashel
-sonar.projectName=Dashel :: Aseba
-sonar.projectVersion=1.3.1
+sonar.projectKey=aseba-community:dashel
+sonar.projectName=Aseba :: Dashel
+# sonar.projectVersion=1.3
 
 sonar.host.url=https://sonarcloud.io
-sonar.organization=davidjsherman-github
+sonar.organization=aseba-community
 
 # Building and coverage
 #
