--- a/debian/control
+++ b/debian/control
@@ -10,5 +10,4 @@ Architecture: any
 Description: DaSHEL is a cross-platform DAta Stream Helper Encapsulation
  Library. It provides a unified access to TCP/IP, serial port, and files
  streams. It also allows a server application to wait for any activity on
- any combination of those streams. This package installs both release
- (libdeashel.a) and debug (libdeasheld.a) library.
+ any combination of those streams.
