--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 include_directories(${dashel_SOURCE_DIR})
-foreach (example microterm chat portlist udp dws)
+foreach (example microterm chat portlist udp dws reconnect)
 	add_executable(${example} ${example}.cpp)
 	target_link_libraries(${example} dashel ${EXTRA_LIBS})
 endforeach ()
