Added missing include.

--- a/dashelConfig.cmake.in
+++ b/dashelConfig.cmake.in
@@ -45,4 +45,5 @@ endif (WIN32)
 find_path(dashel_INCLUDE_DIRS dashel/dashel.h @PROJECT_SOURCE_DIR@ CMAKE_FIND_ROOT_PATH_BOTH)
 find_library(dashel_LIBRARY dashel @PROJECT_BINARY_DIR@ CMAKE_FIND_ROOT_PATH_BOTH)
 set(dashel_LIBRARIES ${dashel_LIBRARY} ${EXTRA_LIBS})
+include(FindPackageHandleStandardArgs)
 find_package_handle_standard_args(dashel DEFAULT_MSG dashel_LIBRARIES dashel_INCLUDE_DIRS)
